[gd_scene load_steps=11 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://hud.tscn" type="PackedScene" id=3]
[ext_resource path="res://PlayerHealthBar.tscn" type="PackedScene" id=4]
[ext_resource path="res://mob.tscn" type="PackedScene" id=5]
[ext_resource path="res://DoubleCoin.tscn" type="PackedScene" id=6]
[ext_resource path="res://Health.tscn" type="PackedScene" id=7]
[ext_resource path="res://Shealth.tscn" type="PackedScene" id=8]
[ext_resource path="res://Bull.tscn" type="PackedScene" id=9]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 2.90845, 1.25266, 0, 0, 0, 0, 475.442, 1.25266, 0, 0, 0, 0, 480.781, 716.727, 0, 0, 0, 0, 2.90845, 708.718, 0, 0, 0, 0, 2.90845, 1.25266, 0, 0, 0, 0, 377.836, 1.06747, 0, 0, 0, 0, 473.854, 1.83041, 0, 0, 0, 0, 322.748, 52.4037, 0, 0, 0, 0, 470.109, 1.83041, 0, 0, 0, 0, 482.844, -2.66451 )
}

[node name="Main" type="Node"]
script = ExtResource( 1 )
mob = ExtResource( 5 )

[node name="PlayerHealthBar" parent="." instance=ExtResource( 4 )]
position = Vector2( 149.597, 71.0426 )

[node name="Player" parent="." instance=ExtResource( 2 )]

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="StartPostion" type="Position2D" parent="."]
position = Vector2( 240, 250 )

[node name="MobPath" type="Path2D" parent="."]
position = Vector2( 0.0408597, 0 )
scale = Vector2( 0.985951, 1 )
curve = SubResource( 1 )

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]
position = Vector2( 2.90845, 1.25266 )
rotation = 3.03855e-08

[node name="MobTimer" type="Timer" parent="."]

[node name="hud" parent="." instance=ExtResource( 3 )]

[node name="GameTIme" type="Timer" parent="."]
wait_time = 0.4

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 238.936, 359.072 )
current = true

[node name="DoubleCoin" parent="." instance=ExtResource( 6 )]
visible = false
position = Vector2( 2.80614, 5.05109 )

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0

[node name="Health" parent="." instance=ExtResource( 7 )]
visible = false
position = Vector2( 1.68369, 3.05176e-05 )

[node name="Shealth" parent="." instance=ExtResource( 8 )]
visible = false
position = Vector2( 0, 0.561218 )

[node name="SpawningTimer" type="Timer" parent="."]
wait_time = 10.0

[node name="Bull" parent="." instance=ExtResource( 9 )]
visible = false

[connection signal="hit" from="Player" to="." method="new_game"]
[connection signal="hit" from="Player" to="." method="game_over"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
[connection signal="timeout" from="MobTimer" to="." method="_on_MobTimer_timeout"]
[connection signal="start_game" from="hud" to="." method="new_game"]
[connection signal="timeout" from="GameTIme" to="." method="_on_GameTIme_timeout"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="SpawningTimer" to="." method="_on_SpawningTimer_timeout"]
